<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:orientation="vertical"
    tools:context=".Activitys.UsersActivity">

  <View
      android:id="@+id/containerTop"
      android:layout_width="match_parent"
      android:layout_height="200dp"
      android:background="@drawable/backgroun_view_top"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:src="@drawable/logo"
      app:layout_constraintBottom_toBottomOf="@id/containerTop"
      app:layout_constraintEnd_toEndOf="@id/containerTop"
      app:layout_constraintStart_toStartOf="@id/containerTop"
      app:layout_constraintTop_toTopOf="@id/containerTop" />

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/txtInputLayoultNome"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="20dp"
      app:boxStrokeColor="@color/dark_cyan_green"
      app:errorEnabled="true"
      app:errorTextColor="@color/red"
      app:hintAnimationEnabled="true"
      app:hintTextColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/containerTop">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:hint="@string/hint_nome"
        android:inputType="text"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp"

        />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/txtInputLayoultIdade"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:boxStrokeColor="@color/dark_cyan_green"
      app:errorEnabled="true"
      app:errorTextColor="@color/red"
      app:hintAnimationEnabled="true"
      app:hintTextColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"

      app:layout_constraintTop_toBottomOf="@id/txtInputLayoultNome">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtcpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:hint="@string/hint_cpf"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/txtInputLayoultTelefone"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:boxStrokeColor="@color/dark_cyan_green"
      app:errorEnabled="true"
      app:errorTextColor="@color/red"
      app:hintAnimationEnabled="true"
      app:hintTextColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"

      app:layout_constraintTop_toBottomOf="@id/txtInputLayoultIdade">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:hint="@string/hint_telefone"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp" />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/txtInputLayoultEmail"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:boxStrokeColor="@color/dark_cyan_green"
      app:errorEnabled="true"
      app:errorTextColor="@color/red"
      app:hintAnimationEnabled="true"
      app:hintTextColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txtInputLayoultTelefone">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCadEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp" />

  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/txtInputLayoultSenha"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      app:boxStrokeColor="@color/dark_cyan_green"
      app:errorEnabled="true"
      app:errorTextColor="@color/red"
      app:hintAnimationEnabled="true"
      app:hintTextColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txtInputLayoultEmail"
      app:passwordToggleEnabled="true">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edtCadSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_edittext"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="15dp"
        android:textSize="18sp" />

  </com.google.android.material.textfield.TextInputLayout>


  <androidx.appcompat.widget.AppCompatButton
      android:id="@+id/btnCadastroLogin"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="20dp"
      android:layout_marginEnd="20dp"
      android:background="@drawable/background_button_selector"
      android:enabled="true"
      android:padding="15dp"
      android:text="@string/txt_button_entrar"
      android:textAllCaps="false"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/txtInputLayoultSenha" />

  <ProgressBar
      android:id="@+id/progressBarCad"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/btnCadastroLogin" />

  </androidx.constraintlayout.widget.ConstraintLayout>