<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        tools:context=".activitys.LoginAcitivity">


        <View
            android:id="@+id/containerTop"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/backgroun_view_top"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            app:layout_constraintTop_toTopOf="@id/containerTop"
            app:layout_constraintStart_toStartOf="@id/containerTop"
            app:layout_constraintEnd_toEndOf="@id/containerTop"
            app:layout_constraintBottom_toBottomOf="@id/containerTop"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoultEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/containerTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp"
                android:padding="15dp"
                android:background="@drawable/background_edittext"
                android:drawableEnd="@drawable/ic_email"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputLayoultSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoultEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:boxStrokeColor="@color/dark_cyan_green"
            app:hintAnimationEnabled="true"
            app:hintTextColor="@color/black"
            app:errorTextColor="@color/red"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_senha"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="15dp"
                android:background="@drawable/background_edittext"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_button_entrar"
            android:padding="15dp"
            android:enabled="true"
            android:textAllCaps="false"
            android:background="@drawable/background_button_selector"
            app:layout_constraintTop_toBottomOf="@id/txtInputLayoultSenha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <TextView
            android:id="@+id/txtTelaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_tela_cadastro"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/btnEntrar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/txtTelaCadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/background_view_bottom"
            app:layout_constraintTop_toBottomOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="20dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
